# Teambuild-Yourself

./: .gitignore  docker-compose.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/api/: entrypoint.py
apps/backend/config/: settings.py  urls.py
apps/backend/users/: api.py  models.py  schemas.py
apps/backend/users/migrations/: 0001_initial.py
